deployment-nifi.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nifi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nifi
    spec:
      containers:
      - name: nifi
        image: apache/nifi:1.4.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nifi
  type: LoadBalancer
