ingress-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
      ingress.kubernetes.io/proxy-body-size: 0m
    name: ingress
spec:
    rules:
      - host: nifi.contoso.com 
        http:
          paths:
            - backend:
                serviceName: nifi
                servicePort: 80
              path: /
    tls:
        - hosts:
            - nifi.contoso.com
          secretName: tls-nifi
